@@ -1,6 +1,6 @@
 config DS_PACKAGE_STREAMRIPPER
 	bool "streamripper 1.61.27 (binary only)"
-	depends on DS_LIB_libmad
+	select DS_LIB_libmad
 	default n
 	help
 	    Record mp3 streams
