@@ -1,6 +1,8 @@
 config DS_PACKAGE_STUNNEL
 	bool "stunnel 4.20"
 	select DS_LIB_libssl
+	select DS_LIB_libz
+	select DS_LIB_libutil
 	default n
 	help
 	    stunnel universal SSL proxy
