@@ -1,6 +1,6 @@
 config DS_PACKAGE_TCPDUMP
 	bool "tcpdump 3.9.4 (binary only)"
-	depends on DS_LIB_libpcap
+	select DS_LIB_libpcap
 	default n
 	help
 	    Network monitoring and data acquisition tool
